<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">YaYa</string>
    <string name="title_section1">Inbox</string>
    <string name="title_section2">Friends</string>
    <string name="title_section3">Section 3</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_logout">Log out</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">Login to start</string>
    <string name="user_name_hint">User Name</string>
    <string name="user_password_hint">Password</string>
    <string name="log_in_btn">SIGN IN</string>
    <string name="signup_text">Don\'t have an account? Sign Up!</string>
    <string name="title_activity_sign_up">SignUp</string>
    <string name="username_signup">Name</string>
    <string name="userpassword_signup">Password</string>
    <string name="usermail_signup">Email</string>
    <string name="signup_btn_text_signup">SIGN UP</string>
    <string name="failed_signup">Failed to signup</string>
    <string name="login_validate_error_msg">Fields are empty. Please enter your username and password to login. </string>
    <string name="failed_login">Failed to login, verify your password and email fields and try again</string>
    <string name="alert_login_failed">Oops! Login Failed</string>
    <string name="alert_signup_failed">Oops! Signup Failed</string>
    <string name="alert_no_disk_space">Sorry, No Disk space</string>
    <string name="edit_friends_label">Edit friends</string>
    <string name="title_activity_edit_friends">Edit Friends</string>
    <string name="alertdialog_error_type_error">Error</string>
    <string name="alert_no_network">No network Available</string>
    <string name="camera_action_label">Camera</string>
    <string name="error_external_storage">There was a problem accesing your devices external storage. Free some space.</string>
    <string name="menu_action_send_label">Send</string>
	<string name="subtitle">My first android app!</string>
    <string-array name="camera_choices">
        <item>Take Photo</item>
        <item>Take Video</item>
        <item>Choose Photo</item>
        <item>Choose Video</item>
    </string-array>

    <string name="empty_recipients_label">Choose some friends first!</string>
    <string name="title_activity_recipients">Recipients</string>
    <string name="title_about">About YaYa</string>
    <string name="upload_file_error">"There was an error with the file selected. Please select another one. "</string>
    <string name="message_sucess">Message sent</string>
    <string name="failed_message">Failed to send message!</string>
    <string name="no_network_connection">No Network Connection. Please check internet connection.</string>
    <string name="error_on_fecth_users">Error getting users.</string>
    <string name="title_activity_view_image">YaYa</string>
    <string name="background_description">Ribbit Background Image</string>
    <string name="signup_cancel_btn_text_signup">CANCEL</string>
    <string name="user_gravatar">user gravatar</string>
	<string name="user_gravatar_checkmarck">user gravatar checkmark</string>
	<string name="push_message">You have a new message from %s</string>
	<string name="no_inbox_messages">You have no messages!</string>
	<string  name="creator">Created by Alexandre Juca corextechnologies@gmail.com</string>
	<string name="why">This is a simple app I created to learn the android ecosystem or api. Nothing special really.</string>
</resources>
