<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.AlexandreJuca.ribbit.LoginActivity" >

    <EditText
        android:id="@+id/userNameField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:ems="10"
        android:hint="@string/user_name_hint" />

    <EditText
        android:id="@+id/userPasswordField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/userNameField"
        android:layout_below="@+id/userNameField"
        android:ems="10"
        android:hint="@string/user_password_hint"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/loginId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/userPasswordField"
        android:layout_below="@+id/userPasswordField"
        android:text="@string/log_in_btn" />

    <TextView
        android:id="@+id/signup_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/loginId"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="63dp"
        android:text="@string/signup_text" />

</RelativeLayout>
