<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.AlexandreJuca.ribbit.SignUpActivity" >

    <EditText
        android:id="@+id/username_signup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:ems="10"
        android:hint="@string/username_signup" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/password_signup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/username_signup"
        android:layout_below="@+id/username_signup"
        android:layout_marginTop="14dp"
        android:ems="10"
        android:inputType="textPassword"
        android:text="@string/userpassword_signup" />

    <EditText
        android:id="@+id/signup_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/password_signup"
        android:layout_below="@+id/password_signup"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:text="@string/usermail_signup" />

    <Button
        android:id="@+id/signup_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/signup_email"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="17dp"
        android:text="@string/signup_btn_text_signup" />

</RelativeLayout>
