<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
   
    tools:context="com.AlexandreJuca.ribbit.ui.AboutActivity" >

    <RelativeLayout
        style="@style/AuthBackground"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <TextView
            android:id="@+id/textView1"
             style="@style/AuthTitle"
            android:text="@string/app_name"

    	></TextView>

        <TextView
            android:id="@+id/textView2"
            style="@style/AuthTextView"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/textView1"
            android:layout_marginTop="68dp"
            android:gravity="center_horizontal"
            android:text="@string/creator"
            android:textAlignment="center"
            android:textColor="@android:color/background_light"
         />

        <TextView
            android:id="@+id/textView3"
            style="@style/AuthTextView"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/textView1"
            android:layout_marginTop="20dp"
            android:text="@string/why"
            android:textAlignment="center"
            android:gravity="center_horizontal"
            android:textColor="@android:color/background_light" />

</RelativeLayout>

</FrameLayout>
